# openai-rpg-utils

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
rpg_utils/: character.py  dice.py
